~Center frame fixing
*Fixed layout problems
*Links are now proper https
*Added thumbnail images
*Dynamic frames slightly more dynamic (close/return function still to be implemented)

--- a/scripts/custom.css
+++ b/scripts/custom.css
@@ -25,7 +25,7 @@ body::-webkit-scrollbar {
 }
 
 .fullheight{
-  height: 100vh !important;
+  height: 100% !important;
   margin: 0px !important;
   padding: 0px !important;
 }
